force-app/main/default/objects/Opportunity/fields/Accommodations_and_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Accommodations_and_Allergies__c</fullName>
    <label>Accommodations and Allergies</label>
    <type>TextArea</type>
</CustomField>