force-app/main/default/objects/Opportunity/fields/Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box once you send the acknowledgement letter</inlineHelpText>
    <label>Acknowledgement Sent</label>
    <type>Checkbox</type>
</CustomField>