force-app/main/default/objects/Opportunity/fields/Basic_Membership_with_Conference_Reg__c.field-meta.xml
<CustomField>
    <fullName>Basic_Membership_with_Conference_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic Membership with Conference Reg</label>
    <type>Checkbox</type>
</CustomField>