force-app/main/default/objects/Opportunity/fields/Benefit_Sponsor_Package__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Sponsor_Package__c</fullName>
    <label>Benefit Sponsor Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend of BIAV</fullName>
            </value>
            <value>
                <fullName>Table Sponsor</fullName>
            </value>
            <value>
                <fullName>Full Slide</fullName>
            </value>
            <value>
                <fullName>Half Slide</fullName>
            </value>
            <value>
                <fullName>Quarter Slide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>