force-app/main/default/objects/Opportunity/fields/Benefit_Ticket_Conference_Discount__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Ticket_Conference_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefit Ticket Conference Discount</label>
    <type>Checkbox</type>
</CustomField>