force-app/main/default/objects/Opportunity/fields/BIAV_Opp_Number__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Opp_Number__c</fullName>
    <description>A unique number assigned to every Opportunity</description>
    <displayFormat>{00000}</displayFormat>
    <inlineHelpText>A unique number assigned to every Opportunity</inlineHelpText>
    <label>Opp Number</label>
    <type>AutoNumber</type>
</CustomField>