force-app/main/default/objects/Opportunity/fields/BIAV_Opp_Number_of_Hard_Credit__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Opp_Number_of_Hard_Credit__c</fullName>
    <description>Opp Number of the real value Opportunity for which this Hard Soft Credit has been assigned</description>
    <inlineHelpText>Opp Number of the real value Opportunity for which this Hard Soft Credit has been assigned</inlineHelpText>
    <label>Opp Number of Hard Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>