force-app/main/default/objects/Opportunity/fields/Camp_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Camp_Enrollment_Status__c</fullName>
    <label>Camp Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 1 &amp; Mini</fullName>
            </value>
            <value>
                <fullName>Week 1 &amp; Mini &amp; Week 2</fullName>
            </value>
            <value>
                <fullName>Week 1 &amp; Week 2</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>