force-app/main/default/objects/Opportunity/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name field used for web forms, not on page layout</description>
    <label>Company Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>