force-app/main/default/objects/Opportunity/fields/Conference_Sponsorships__c.field-meta.xml
<CustomField>
    <fullName>Conference_Sponsorships__c</fullName>
    <label>Conference Sponsorships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Sponsor</fullName>
            </value>
            <value>
                <fullName>Premier Sponsor</fullName>
            </value>
            <value>
                <fullName>Patron Sponsor</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>