force-app/main/default/objects/Opportunity/fields/Fiscal_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Qtr__c</fullName>
    <description>Fiscal year with quarter</description>
    <formula>CASE(
MONTH(CloseDate),
1, (TEXT(YEAR(CloseDate)))+&quot;-Q3&quot;,
2, (TEXT(YEAR(CloseDate)))+&quot;-Q3&quot;,
3, (TEXT(YEAR(CloseDate)))+&quot;-Q3&quot;,
4, (TEXT(YEAR(CloseDate)))+&quot;-Q4&quot;,
5, (TEXT(YEAR(CloseDate)))+&quot;-Q4&quot;,
6, (TEXT(YEAR(CloseDate)))+&quot;-Q4&quot;,
7, (TEXT(YEAR(CloseDate)+1))+&quot;-Q1&quot;,
8, (TEXT(YEAR(CloseDate)+1))+&quot;-Q1&quot;,
9, (TEXT(YEAR(CloseDate)+1))+&quot;-Q1&quot;,
10, (TEXT(YEAR(CloseDate)+1))+&quot;-Q2&quot;,
11, (TEXT(YEAR(CloseDate)+1))+&quot;-Q2&quot;,
12, (TEXT(YEAR(CloseDate)+1))+&quot;-Q2&quot;,
&quot;Blank&quot;)</formula>
    <inlineHelpText>Fiscal year with quarter</inlineHelpText>
    <label>Fiscal Qtr</label>
    <type>Text</type>
</CustomField>