force-app/main/default/objects/Opportunity/fields/Golf_Packages__c.field-meta.xml
<CustomField>
    <fullName>Golf_Packages__c</fullName>
    <label>Golf Packages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Sponsor</fullName>
            </value>
            <value>
                <fullName>Reception Sponsor</fullName>
            </value>
            <value>
                <fullName>Lunch Sponsor</fullName>
            </value>
            <value>
                <fullName>Beverage Cart Sponsor</fullName>
            </value>
            <value>
                <fullName>Practice Tee or Putting Green Sponsor</fullName>
            </value>
            <value>
                <fullName>Team Sponsor</fullName>
            </value>
            <value>
                <fullName>Hole Sponsor</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Individual Player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>