force-app/main/default/objects/Opportunity/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>#of hours donated</description>
    <inlineHelpText>#of hours donated</inlineHelpText>
    <label>Hours</label>
    <type>TextArea</type>
</CustomField>