force-app/main/default/objects/Opportunity/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when notification letter is sent to the honoree</inlineHelpText>
    <label>Notification Sent</label>
    <type>Checkbox</type>
</CustomField>