force-app/main/default/objects/Opportunity/fields/On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_Of__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Money given in the Opportunity is payment for this contact</description>
    <inlineHelpText>oney given in the Opportunity is payment for this contact</inlineHelpText>
    <label>On Behalf Of</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (On Behalf Of)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>