force-app/main/default/objects/Opportunity/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card (website)</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Online Deposit</fullName>
            </value>
            <value>
                <fullName>Allstate</fullName>
            </value>
            <value>
                <fullName>Amazon Smile Foundation</fullName>
            </value>
            <value>
                <fullName>America Cyber Grant</fullName>
            </value>
            <value>
                <fullName>CAFA Cyber Grant</fullName>
            </value>
            <value>
                <fullName>Charities Aid Foundation of America</fullName>
            </value>
            <value>
                <fullName>Community Health Charities</fullName>
            </value>
            <value>
                <fullName>Facebook Payments</fullName>
            </value>
            <value>
                <fullName>Network for Good</fullName>
            </value>
            <value>
                <fullName>Paypal Charities Giving Fund</fullName>
            </value>
            <value>
                <fullName>United Way</fullName>
            </value>
            <value>
                <fullName>Your Cause LLC</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>