force-app/main/default/objects/Opportunity/fields/Pro_Friday_Conference_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Pro_Friday_Conference_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro Friday Conference Ticket</label>
    <type>Checkbox</type>
</CustomField>