force-app/main/default/objects/Opportunity/fields/Pro_Membership_with_Conference_Reg__c.field-meta.xml
<CustomField>
    <fullName>Pro_Membership_with_Conference_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro Membership with Conference Reg</label>
    <type>Checkbox</type>
</CustomField>