force-app/main/default/objects/Opportunity/fields/Pro_Saturday_Conference_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Pro_Saturday_Conference_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro Saturday Conference Ticket</label>
    <type>Checkbox</type>
</CustomField>