force-app/main/default/objects/Opportunity/fields/Survivor_Saturday_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Survivor_Saturday_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survivor Saturday Ticket</label>
    <type>Checkbox</type>
</CustomField>