force-app/main/default/objects/Opportunity/fields/Tribute_Category__c.field-meta.xml
<CustomField>
    <fullName>Tribute_Category__c</fullName>
    <label>Tribute Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Memory of</fullName>
            </value>
            <value>
                <fullName>In Honor of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>