force-app/main/default/objects/Opportunity/fields/We_would_like_to_exhibit_on_Saturday__c.field-meta.xml
<CustomField>
    <fullName>We_would_like_to_exhibit_on_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>We would like to exhibit on Saturday</label>
    <type>Checkbox</type>
</CustomField>