force-app/main/default/objects/Opportunity/fields/Web_Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Donation_ID__c</fullName>
    <label>Web Donation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>