force-app/main/default/objects/Opportunity/businessProcesses/Donation.recordType-meta.xml
<RecordType>
    <fullName>Donation</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Donation Received</description>
    <label>Donation</label>
</RecordType>