force-app/main/default/objects/Opportunity/recordTypes/Fundraising_Registration_and_Tickets.recordType-meta.xml
<RecordType>
    <fullName>Fundraising_Registration_and_Tickets</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Tickets and registration related to fundraising events (e.g. golf, legacy dinner)</description>
    <label>Fundraising Registration and Tickets</label>
</RecordType>