force-app/main/default/objects/Opportunity/recordTypes/Hard_Soft_Credit.recordType-meta.xml
<RecordType>
    <fullName>Hard_Soft_Credit</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>A reportable version of a Soft Credit</description>
    <label>Hard Soft Credit</label>
</RecordType>