force-app/main/default/objects/Opportunity/recordTypes/Recurring_Donation.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Donation</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Recurring donation</description>
    <label>Recurring Donation</label>
</RecordType>