force-app/main/default/objects/Opportunity/recordTypes/Registration.recordType-meta.xml
<RecordType>
    <fullName>Registration</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Registration and Program Fees</description>
    <label>Registration</label>
</RecordType>