force-app/main/default/objects/Opportunity/listViews/All_FB_Fundraiser_Donations.listView-meta.xml
<ListView>
    <fullName>All_FB_Fundraiser_Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>startsWith</operation>
        <value>FB</value>
    </filters>
    <label>All FB Fundraiser Donations</label>
</ListView>