force-app/main/default/objects/Opportunity/listViews/All_Registration_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Registration_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Registration</value>
    </filters>
    <label>All Registration Opportunities</label>
    <sharedTo>
        <role>BIAV_Admins</role>
    </sharedTo>
</ListView>