force-app/main/default/objects/Opportunity/listViews/Hard_Soft_Credit_Opportunities.listView-meta.xml
<ListView>
    <fullName>Hard_Soft_Credit_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>drogers</value>
    </filters>
    <label>Hard Soft Credit Opportunities</label>
    <sharedTo>
        <role>BIAV_Admins</role>
    </sharedTo>
</ListView>