force-app/main/default/objects/Opportunity/listViews/In_Kind_Opportunities.listView-meta.xml
<ListView>
    <fullName>In_Kind_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>npsp__In_Kind_Type__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.In_Kind_Gift</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>In-Kind Opportunities &gt;$0</label>
</ListView>