force-app/main/default/objects/Opportunity/listViews/Opportunities_without_Primary.listView-meta.xml
<ListView>
    <fullName>Opportunities_without_Primary</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Primary_Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Opportunity.Hard_Soft_Credit,Opportunity.In_Kind_Gift,Opportunity.Registration</value>
    </filters>
    <label>Opportunities without Primary</label>
    <sharedTo>
        <role>BIAV_Admins</role>
    </sharedTo>
</ListView>