force-app/main/default/objects/Opportunity/listViews/Registration_Opportunities.listView-meta.xml
<ListView>
    <fullName>Registration_Opportunities</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 and 5</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>On_Behalf_Of__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Registration</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2015</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notContain</operation>
        <value>__</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Roanoke Area Brain Injury Connection</value>
    </filters>
    <label>Registration Opportunities</label>
</ListView>