force-app/main/default/objects/Opportunity/listViews/Sponsorships_without_Type.listView-meta.xml
<ListView>
    <fullName>Sponsorships_without_Type</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Sponsorship</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Sponsorships without Type</label>
    <sharedTo>
        <group>Online_Daily</group>
    </sharedTo>
</ListView>